crates/bevy_reflect_compile_fail_tests/tests/field_attributes/ignored_order.fail.rs
use bevy_reflect::Reflect;

#[derive(Reflect)]
struct Foo {
    #[reflect(ignore)]
    a: i32,
    b: i32,
}

fn main() {}
